[tool.poetry]
name = "transcoding-cli"
version = "0.1.0"
description = ""
authors=[]

[tool.poetry.dependencies]
python = "^3.10"
yapapi = "^0.9.3"
ffmpeg-tools={git="https://github.com/golemfactory/ffmpeg-tools.git"}

[tool.poetry.dev-dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
